--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -45,10 +45,52 @@
   /* Just making it pretty */
   background: #38a9e4;
   color: white;
-  font-family:
-    Helvetica,
-    Arial Black,
-    sans;
+  font-family: Helvetica, Arial Black, sans;
   font-size: 20px;
   text-align: center;
+}
+.scanMeja {
+  position: fixed;
+  bottom: 90px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgb(143, 135, 135);
+  color: #fff;
+  width: 147px;
+  height: 40px;
+  border-radius: 25px;
+  padding: 0px 10px;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 600;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: height 0.3s ease;
+}
+
+.scanMeja.stretched {
+  height: 70px;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.qrIcon {
+  top: 2px;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-color: rgb(143, 135, 135);
+}
+
+.hapusMejaBtn {
+  margin-top: 10px;
+  background-color: #d9534f;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
 }
