--- a/src/pages/Transactions.module.css
+++ b/src/pages/Transactions.module.css
@@ -1,5 +1,6 @@
 .Transactions {
-  overflow-x: hidden;
+  overflow-x: auto;
+  height: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -62,10 +63,23 @@
   margin: 0 auto;
   cursor: pointer;
   display: block; /* Centering the button */
-  margin-bottom: 23px;
   text-align: center;
 }
-
+.DeclineButton {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 20px;
+  padding: 12px 24px; /* Add some padding for spacing */
+  color: rgba(88, 55, 50, 1);
+  background-color: transparent; /* No background */
+  border: none; /* No border */
+  margin: 0 auto; /* Center horizontally */
+  cursor: pointer;
+  display: block; /* Center the text horizontally */
+  text-align: center; /* Center the text within the button */
+  margin-bottom: 23px; /* Space at the bottom to match the PayButton */
+}
 .RoundedRectangle {
   border-radius: 20px;
   padding: 15px; /* Adjusted for better spacing */
