--- a/src/pages/Transactions.module.css
+++ b/src/pages/Transactions.module.css
@@ -4,7 +4,7 @@
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: rgba(88, 55, 50, 1);
   background-color: #e9e9e9;
@@ -18,7 +18,7 @@
   color: rgba(88, 55, 50, 1);
   text-align: left;
   margin-left: 20px;
-  margin-top: 17px;
+  margin-top: 30px;
 }
 
 .Transactions-detail {
