--- a/src/pages/Transactions.module.css
+++ b/src/pages/Transactions.module.css
@@ -90,3 +90,29 @@
 .expression {
   width: 100%;
 }
+
+.Note {
+  text-align: left;
+  color: rgba(88, 55, 50, 1);
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.NoteContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  font-size: 1em;
+  margin-bottom: 15px;
+}
+
+.NoteInput {
+  height: 12vw;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 10px;
+  font-size: 1.2em;
+  border: 1px solid rgba(88, 55, 50, 0.5);
+  resize: none; /* Prevent resizing */
+  overflow-wrap: break-word; /* Ensure text wraps */
+}
