--- a/src/components/ItemLister.module.css
+++ b/src/components/ItemLister.module.css
@@ -42,7 +42,7 @@
   margin-top: 10px;
   padding: 8px 16px; /* Adjust padding as needed */
   font-size: 14px;
-  background-color: #007bff;
+  background-color: #359d42d1;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -66,6 +66,7 @@
   position: relative;
 }
 .editModeLayout {
+  border-radius: 4px;
   position: absolute;
   z-index: 100;
   background-color: #0000008c;
