--- a/src/pages/Transactions.module.css
+++ b/src/pages/Transactions.module.css
@@ -8,6 +8,7 @@
   font-size: calc(10px + 2vmin);
   color: rgba(88, 55, 50, 1);
   background-color: #e9e9e9;
+  border-radius: 15px;
 }
 
 .Transactions-title {
@@ -34,6 +35,8 @@
 
 .TransactionListContainer {
   overflow-y: auto; /* Enables vertical scrolling */
+  background-color: #dbdbdb;
+  overflow: visible;
 }
 
 .TotalContainer {
@@ -48,6 +51,21 @@
   padding: 10px;
   box-sizing: border-box; /* Includes padding in width */
   margin-bottom: 17px;
+}
+
+.PaymentContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%; /* Ensures it takes up full width */
+  margin: 0 auto;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.5em;
+  padding: 10px;
+  box-sizing: border-box; /* Includes padding in width */
+  margin-bottom: 17px;
+  justify-content: center;
 }
 
 .PayButton {
