--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -13,7 +13,7 @@
 
 .modalContent {
   width: 90%;
-  height: 80%;
+  /* height: 80%; */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: relative;
   overflow: visible; /* Add this line to enable scrolling */
