--- a/src/pages/WelcomePage.css
+++ b/src/pages/WelcomePage.css
@@ -47,10 +47,11 @@
 
 /* Fullscreen styles */
 .fullscreen {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   width: 100vw;
   height: 100vh;
   transform: translate(-50%, -50%);
+  z-index: 300;
 }
