--- a/src/components/ItemType.module.css
+++ b/src/components/ItemType.module.css
@@ -18,7 +18,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   position: relative; /* Ensure absolute positioning inside works */
 }
 .item-type-nomargin {
