--- a/src/components/ItemLister.module.css
+++ b/src/components/ItemLister.module.css
@@ -102,7 +102,7 @@
 
 .PaymentOption {
   overflow-x: hidden;
-  background-color: white;
+  background-color: #e9e9e9;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -130,7 +130,18 @@
   padding: 10px 0;
   margin-bottom: 17px;
 }
-
+.OptionContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  margin: 0 auto;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 0.9em;
+  padding: 10px 0;
+  margin-bottom: 17px;
+}
 .PayButton {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
